feat: hardcode for database url